# Pmf-from-gofr

./: .gitignore  README.md  environment.yml  pyproject.toml
src/pmf_from_gofr/: cli.py  core.py  plotting.py
src/pmf_from_gofr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
